# rust-lab

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  install.sh  rustfmt.toml
cli-lab/clap-lab/: Cargo.toml
cli-lab/clap-lab/src/: main.rs
error-lab/this_error_demo/: Cargo.toml
error-lab/unified_error/: Cargo.toml
error-lib/this_error_demo/: Cargo.toml
error-lib/this_error_demo/src/: main.rs
error-lib/unified_error/: Cargo.toml
error-lib/unified_error/src/: main.rs
high-performance-lab/false-sharing/: Cargo.toml
high-performance-lab/false-sharing/benches/: cacheline.md  cacheline.rs
mvp/: Cargo.toml  build.rs
mvp/src/: error.rs  lib.rs  main.rs  templates.rs
mvp/src/add/: base.rs  context.rs  mod.rs  prelude.rs
mvp/src/add/factory/: mod.rs  (+1 more)
mvp/templates/: LICENSE-APACHE  LICENSE-MIT  LICENSE.md  README.md
mvp/templates/vscode/: settings.json
process-lab/process/: Cargo.toml
process-lab/process/src/: main.rs  msg_test.rs  pipe_test.rs  socket_test.rs
process-lab/self-pipe-trick/: Cargo.toml
process-lab/self-pipe-trick/src/: main.rs
process/src/: pipe_test.rs
template-lab/tera-lab/: Cargo.toml
template-lab/tera-lab/src/: main.rs
template-lab/tera-lab/templates/: hello.html
test-lab/basic-test/: Cargo.toml
test-lab/basic-test/src/: basic_01.rs  lib.rs
test-lab/basic-test/tests/: integration_test.rs
unsafecell-lab/unsafecell-lab/: Cargo.toml
unsafecell-lab/unsafecell-lab/src/: main.rs  refcell.rs  unsafecell.rs
volatile-lab/: Cargo.toml
volatile-lab/src/: main.rs  volatile_ptr.rs  volatile_ref.rs
(+22 files in other folders)
